{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 52,
  "lineage": "c2c83489-dc17-449d-6c01-baeaa9f217b6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:824431064955:loadbalancer/net/demo/0770ac218014cee6",
            "arn_suffix": "net/demo/0770ac218014cee6",
            "dns_name": "demo-0770ac218014cee6.elb.eu-west-1.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:824431064955:loadbalancer/net/demo/0770ac218014cee6",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "demo",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0489a07e7cbe2f0c3"
              },
              {
                "subnet_id": "subnet-04d0a37f4d6b0481f"
              },
              {
                "subnet_id": "subnet-0d07ecbe70ed7ed43"
              }
            ],
            "subnets": [
              "subnet-0489a07e7cbe2f0c3",
              "subnet-04d0a37f4d6b0481f",
              "subnet-0d07ecbe70ed7ed43"
            ],
            "vpc_id": "vpc-0757f63bd1f5a993b",
            "zone_id": "Z2IFOLAFXWLO4F"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:824431064955:listener/net/demo/0770ac218014cee6/354cd31d57f434f8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:824431064955:targetgroup/demo-http-blue/e54283dc3a335795",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:824431064955:listener/net/demo/0770ac218014cee6/354cd31d57f434f8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:824431064955:loadbalancer/net/demo/0770ac218014cee6",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.demo",
            "aws_lb_target_group.demo-blue",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "demo-blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:824431064955:targetgroup/demo-http-blue/e54283dc3a335795",
            "arn_suffix": "targetgroup/demo-http-blue/e54283dc3a335795",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:824431064955:targetgroup/demo-http-blue/e54283dc3a335795",
            "lambda_multi_value_headers_enabled": false,
            "name": "demo-http-blue",
            "port": 3000,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0757f63bd1f5a993b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "demo-green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:824431064955:targetgroup/demo-http-green/e4d78b162a8a6134",
            "arn_suffix": "targetgroup/demo-http-green/e4d78b162a8a6134",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:824431064955:targetgroup/demo-http-green/e4d78b162a8a6134",
            "lambda_multi_value_headers_enabled": false,
            "name": "demo-http-green",
            "port": 3000,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0757f63bd1f5a993b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:824431064955:security-group/sg-080382e013c853f1c",
            "description": "ECS demo",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080382e013c853f1c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ECS demo",
            "name_prefix": "",
            "owner_id": "824431064955",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0757f63bd1f5a993b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:824431064955:internet-gateway/igw-0da51e31ecf74e2bb",
            "id": "igw-0da51e31ecf74e2bb",
            "owner_id": "824431064955",
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "vpc_id": "vpc-0757f63bd1f5a993b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0da51e31ecf74e2bb",
            "id": "r-rtb-0ff740e8a0c3eacfa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ff740e8a0c3eacfa",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:824431064955:route-table/rtb-02666cb2886c87e31",
            "id": "rtb-02666cb2886c87e31",
            "owner_id": "824431064955",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0757f63bd1f5a993b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:824431064955:route-table/rtb-0d51a1cfee2aeea97",
            "id": "rtb-0d51a1cfee2aeea97",
            "owner_id": "824431064955",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0757f63bd1f5a993b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:824431064955:route-table/rtb-021bcb3ca40aa81f3",
            "id": "rtb-021bcb3ca40aa81f3",
            "owner_id": "824431064955",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0757f63bd1f5a993b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:824431064955:route-table/rtb-0ff740e8a0c3eacfa",
            "id": "rtb-0ff740e8a0c3eacfa",
            "owner_id": "824431064955",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0757f63bd1f5a993b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a32f4c81a6e91d5",
            "route_table_id": "rtb-02666cb2886c87e31",
            "subnet_id": "subnet-00614b5c47dc0d8cc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a31fa01cdc49c208",
            "route_table_id": "rtb-0d51a1cfee2aeea97",
            "subnet_id": "subnet-000e309605f82b3be"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d219ec7020d84fca",
            "route_table_id": "rtb-021bcb3ca40aa81f3",
            "subnet_id": "subnet-0760d85c11bc9271c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ddab7692527348a",
            "route_table_id": "rtb-0ff740e8a0c3eacfa",
            "subnet_id": "subnet-04d0a37f4d6b0481f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdaaa671cb940726",
            "route_table_id": "rtb-0ff740e8a0c3eacfa",
            "subnet_id": "subnet-0489a07e7cbe2f0c3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029f492897346d710",
            "route_table_id": "rtb-0ff740e8a0c3eacfa",
            "subnet_id": "subnet-0d07ecbe70ed7ed43"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:824431064955:subnet/subnet-00614b5c47dc0d8cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00614b5c47dc0d8cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "824431064955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "vpc_id": "vpc-0757f63bd1f5a993b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:824431064955:subnet/subnet-000e309605f82b3be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000e309605f82b3be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "824431064955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "vpc_id": "vpc-0757f63bd1f5a993b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:824431064955:subnet/subnet-0760d85c11bc9271c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0760d85c11bc9271c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "824431064955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "vpc_id": "vpc-0757f63bd1f5a993b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:824431064955:subnet/subnet-04d0a37f4d6b0481f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d0a37f4d6b0481f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "824431064955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "vpc_id": "vpc-0757f63bd1f5a993b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:824431064955:subnet/subnet-0489a07e7cbe2f0c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0489a07e7cbe2f0c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "824431064955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "vpc_id": "vpc-0757f63bd1f5a993b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:824431064955:subnet/subnet-0d07ecbe70ed7ed43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d07ecbe70ed7ed43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "824431064955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "vpc_id": "vpc-0757f63bd1f5a993b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:824431064955:vpc/vpc-0757f63bd1f5a993b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0913f2f647a671c67",
            "default_route_table_id": "rtb-0e7146a85f39ac21d",
            "default_security_group_id": "sg-05c952df4563016a4",
            "dhcp_options_id": "dopt-02ab430c293110570",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0757f63bd1f5a993b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e7146a85f39ac21d",
            "owner_id": "824431064955",
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            }
          }
        }
      ]
    }
  ]
}